--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,9 @@ name: Deploy to GitHub Pages
 on:
   release:
     types: [published]
-
+  push:
+    branches:
+      - main
   workflow_dispatch:
 
 permissions:
