--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@iconify-prerendered/vue-mdi": "^0.28.0",
+    "@tailwindcss/postcss": "^4.0.0",
+    "@tailwindcss/vite": "^4.0.0",
     "@types/marked": "^6.0.0",
     "@vueuse/components": "^10.11.1",
     "@vueuse/core": "^12.0.0",
@@ -20,13 +22,12 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.43.0",
-    "@vitejs/plugin-vue": "^4.6.2",
+    "@vitejs/plugin-vue": "^5.2.1",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.0.0",
-    "postcss": "^8.4.48",
     "tailwindcss": "^4.0.0",
     "typescript": "^5.6.3",
-    "vite": "^4.5.9",
+    "vite": "^6.0.0",
     "vue-tsc": "^2.1.10"
   }
 }
