--- a/package.json
+++ b/package.json
@@ -10,14 +10,12 @@
   },
   "dependencies": {
     "@iconify-prerendered/vue-mdi": "^0.28.0",
-    "@tailwindcss/postcss": "^4.0.0",
-    "@tailwindcss/vite": "^4.0.0",
     "@types/marked": "^6.0.0",
     "@vueuse/components": "^10.11.1",
     "@vueuse/core": "^12.0.0",
     "marked": "^15.0.0",
     "sass": "^1.80.6",
-    "vue": "^3.5.13",
+    "vue": "^3.5.12",
     "vue-i18n": "^11.0.0"
   },
   "devDependencies": {
@@ -25,9 +23,10 @@
     "@vitejs/plugin-vue": "^4.6.2",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.0.0",
+    "postcss": "^8.4.48",
     "tailwindcss": "^4.0.0",
     "typescript": "^5.6.3",
-    "vite": "^5.4.14",
+    "vite": "^4.5.9",
     "vue-tsc": "^2.1.10"
   }
 }
