--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "website",
+  "name": "project-bluefin-website",
   "type": "module",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "vite",
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "@iconify-prerendered/vue-mdi": "^0.28.0",
-    "@tailwindcss/postcss": "^4.0.0",
     "@tailwindcss/vite": "^4.0.0",
     "@types/marked": "^6.0.0",
     "@vueuse/components": "^10.11.1",
@@ -21,10 +20,7 @@
     "vue-i18n": "^11.0.0"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.43.0",
     "@vitejs/plugin-vue": "^4.6.2",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^9.0.0",
     "tailwindcss": "^4.0.0",
     "typescript": "^5.6.3",
     "vite": "^5.4.14",
