--- a/package.json
+++ b/package.json
@@ -9,21 +9,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@iconify-prerendered/vue-mdi": "^0.28.0",
+    "@iconify-prerendered/vue-mdi": "^0.28.1737398331",
     "@tailwindcss/vite": "^4.0.0",
     "@types/marked": "^6.0.0",
-    "@vueuse/components": "^10.11.1",
-    "@vueuse/core": "^12.0.0",
-    "marked": "^15.0.0",
-    "sass": "^1.80.6",
+    "@vueuse/components": "^12.5.0",
+    "@vueuse/core": "^12.5.0",
+    "marked": "^15.0.6",
+    "sass": "^1.83.4",
     "vue": "^3.5.13",
-    "vue-i18n": "^11.0.0"
+    "vue-i18n": "^11.0.1"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^4.6.2",
+    "@vitejs/plugin-vue": "^5.2.1",
     "tailwindcss": "^4.0.0",
-    "typescript": "^5.6.3",
-    "vite": "^5.4.14",
-    "vue-tsc": "^2.1.10"
+    "typescript": "^5.7.3",
+    "vite": "^6.0.11",
+    "vue-tsc": "^2.2.0"
   }
 }
