--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@iconify-prerendered/vue-mdi": "^0.28.1737398331",
+    "@iframe-resizer/child": "^5.3.2",
+    "@iframe-resizer/parent": "^5.3.2",
+    "@iframe-resizer/vue": "^5.3.2",
     "@tailwindcss/vite": "^4.0.0",
     "@types/marked": "^6.0.0",
     "@vueuse/components": "^12.5.0",
